force-app/main/default/objects/Log_Entry__c/Log_Entry__c.object-meta.xml
<CustomObject>
    <label>Log Entry</label>
    <nameField>
        <label>Log Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>