force-app/main/default/objects/Log_Entry__c/fields/Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Archive_Date__c</fullName>
    <description>When the log was archived</description>
    <label>Archive Date</label>
    <type>DateTime</type>
</CustomField>