force-app/main/default/objects/Log_Entry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTEGRATION</fullName>
            </value>
            <value>
                <fullName>BUSINESS_LOGIC</fullName>
            </value>
            <value>
                <fullName>DATA_PROCESSING</fullName>
            </value>
            <value>
                <fullName>SECURITY</fullName>
            </value>
            <value>
                <fullName>PERFORMANCE</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>USER_ACTION</fullName>
            </value>
            <value>
                <fullName>BATCH_PROCESS</fullName>
            </value>
            <value>
                <fullName>TRIGGER</fullName>
            </value>
            <value>
                <fullName>WORKFLOW</fullName>
            </value>
            <value>
                <fullName>VALIDATION</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>