force-app/main/default/objects/Log_Entry__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Apex class generating the log</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>