force-app/main/default/objects/Log_Entry__c/fields/CPU_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Ms__c</fullName>
    <description>CPU time consumed in milliseconds</description>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>