force-app/main/default/objects/Log_Entry__c/fields/DML_Statements_Used__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Used__c</fullName>
    <description>Number of DML statements used</description>
    <label>DML Statements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>