force-app/main/default/objects/Log_Entry__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
            <value>
                <fullName>SANDBOX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>