force-app/main/default/objects/Log_Entry__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Type of exception if applicable</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>