force-app/main/default/objects/Log_Entry__c/fields/Heap_Size_KB__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size_KB__c</fullName>
    <description>Heap size used in KB</description>
    <label>Heap Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>