force-app/main/default/objects/Log_Entry__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Line number in code</description>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>