force-app/main/default/objects/Log_Entry__c/fields/Memory_Usage_KB__c.field-meta.xml
<CustomField>
    <fullName>Memory_Usage_KB__c</fullName>
    <description>Memory consumption in KB</description>
    <label>Memory Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>