force-app/main/default/objects/Log_Entry__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Method generating the log</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>