force-app/main/default/objects/Log_Entry__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>External request identifier</description>
    <label>Request ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>