force-app/main/default/objects/Log_Entry__c/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <description>Days to retain before archiving</description>
    <label>Retention Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>