force-app/main/default/objects/Log_Entry__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <description>Salesforce session identifier</description>
    <label>Session ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>