force-app/main/default/objects/Log_Entry__c/fields/SOQL_Queries_Used__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Used__c</fullName>
    <description>Number of SOQL queries consumed</description>
    <label>SOQL Queries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>