force-app/main/default/objects/Log_Entry__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Detailed categorization</description>
    <label>Sub Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>