force-app/main/default/objects/Log_Entry__c/fields/User_Context__c.field-meta.xml
<CustomField>
    <fullName>User_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User associated with the log</description>
    <label>User Context</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserContext</relationshipName>
    <type>Lookup</type>
</CustomField>