force-app/main/default/objects/Log_Entry__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Application/code version</description>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>